test/good/functions/args07.px

func f(x: [Float] = [0]) def
    print x

f()
f(x=[8, 10^^16])
