test/bad/functions/type12.px

func f(Int x: 0) def
    print x

g = f
g()
